for plurality testing